# archidoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  publish.yml
adapters/: how-to-write-a-language-adapter.md
adapters/archidoc-rust/: Cargo.toml
adapters/archidoc-rust/src/: cargo_modules.rs  fitness.rs  lib.rs  parser.rs  path_resolver.rs  pattern_heuristic.rs  promote.rs  walker.rs
adapters/archidoc-rust/tests/: flat_module_test.rs
adapters/archidoc-ts/: README.md  package-lock.json  package.json  tsconfig.json
adapters/archidoc-ts/src/: index.ts  parser.ts  path-resolver.ts  types.ts  walker.ts
adapters/archidoc-ts/tests/: import-extraction.test.ts  integration.test.ts  parser.test.ts  walker.test.ts
adapters/archidoc-ts/tests/fixtures/dashboard/: index.ts
adapters/archidoc-ts/tests/fixtures/dashboard/charts/: index.ts
core/archidoc-cli/: Cargo.toml
core/archidoc-cli/src/: main.rs
core/archidoc-cli/tests/: cli_integration_test.rs
core/archidoc-engine/: Cargo.toml
core/archidoc-engine/src/: ai_context.rs  architecture.rs  check.rs  drawio.rs  health.rs  init.rs  ir.rs  lib.rs  markdown.rs  merge.rs  mermaid.rs  plantuml.rs  suggest.rs  validate.rs
core/archidoc-types/: Cargo.toml
core/archidoc-types/src/: annotation.rs  lib.rs  module_doc.rs  report.rs
core/spec/: archidoc-ir-schema.json
core/tests/: Cargo.toml
core/tests/src/: lib.rs  params.rs
core/tests/src/drivers/: mod.rs
core/tests/src/drivers/in_memory/: architecture.rs  mod.rs
core/tests/src/drivers/protocol_driver/: architecture.rs  mod.rs
core/tests/src/dsl/: architecture.rs  mod.rs
core/tests/src/fakes/: fake_source_tree.rs  mod.rs
core/tests/tests/: annotation_scaffolding_test.rs  architecture_compilation_test.rs  component_relationships_test.rs  documentation_drift_test.rs  expanded_pattern_validation_test.rs  health_reporting_test.rs  ir_file_consumption_test.rs  ir_merge_test.rs  ir_negative_validation_test.rs  ir_roundtrip_stability_test.rs  pattern_validation_test.rs  portable_ir_test.rs  project_health_test.rs  validation_test.rs
docs/: annotating-your-project.md  annotation-spec.md  annotation-syntax-rfc.md  archidoc-for-llms.md  how-to-write-a-language-adapter.md
examples/rust-example/: README.md
examples/rust-example/src/api/: errors.rs  middleware.rs  mod.rs  routes.rs
examples/rust-example/src/database/: mod.rs  pool.rs  queries.rs
examples/rust-example/src/events/: bus.rs  mod.rs
examples/ts-example/: README.md
examples/ts-example/src/dashboard/: charts.ts  index.ts
examples/ts-example/src/websocket/: connection.ts  index.ts  protocol.ts
hooks/: README.md  pre-commit
