[package]
name = "archidoc-types"
version = "0.2.0"
edition = "2021"
description = "Shared types for the archidoc toolchain"
license = "MIT"
repository = "https://github.com/GitSmart86/archidoc"
keywords = ["c4-model", "architecture", "documentation", "bdd"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
